--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ build_project:
  stage: build
  script:
  - xcodebuild clean -project Covid-19App.xcodeproj -scheme Covid-19App | xcpretty
- - xcodebuild test -project  Covid-19App.xcodeproj -scheme Covid-19App -destination 'platform=iOS Simulator,name=iPhone 11 Max,OS=13.3' | xcpretty -s
+ - xcodebuild test -project  Covid-19App.xcodeproj -scheme Covid-19App -destination 'platform=iOS Simulator,name=iPhone 11 Max,OS=13.3,name=iPhone 11 Pro Max,OS=13.4' | xcpretty -s
  tags:
  - iOS
  - test
