--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ build_project:
  - xcodebuild clean -project Covid-19App.xcodeproj -scheme Covid-19App | xcpretty
  - xcodebuild test -project  Covid-19App.xcodeproj -scheme Covid-19App -destination 'platform=iOS Simulator,name=iPhone 11 Max,OS=13.3,name=iPhone 11 Pro Max,OS=13.4' | xcpretty -s
  tags:
- - iOS
+ - ios
  - test
 
